# GD-Song-Metadafier

./: Cargo.toml
src/: add_metadata.rs  main.rs  utils.rs  wipe_metadata.rs
